<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_For_Screen_New" Id="{35a6d01c-8fc1-45b7-b7b7-adfed76af279}">
    <Declaration><![CDATA[TYPE ST_For_Screen_New :
STRUCT
	data				:WSTRING(255);
	alarmy				:WSTRING(1000);
	alarmy_id			:UDINT;
	stacja				:UDINT;
	user				:WSTRING(80);
	bErrorOccure		:BOOL := FALSE;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>